--- a/network_test.ipynb
+++ b/network_test.ipynb
@@ -33,7 +33,8 @@
     "%install_ext https://raw.github.com/cpcloud/ipython-autotime/master/autotime.py\n",
     "%load_ext autotime\n",
     "from user_class import User, find_new_friends\n",
-    "import scipy.sparse as sp"
+    "import scipy.sparse as sp\n",
+    "import tables as tb"
    ]
   },
   {
@@ -47,7 +48,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 3.31 ms\n"
+      "time: 2.89 ms\n"
      ]
     }
    ],
@@ -73,7 +74,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 26.7 s\n"
+      "time: 28.2 s\n"
      ]
     }
    ],
@@ -99,11 +100,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 21.2 s\n"
+     ]
+    }
+   ],
    "source": [
     "stream_dict = {}\n",
     "stream_dict['time'] = {}\n",
@@ -126,30 +135,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "' 🇨🇴🇨🇴🇨🇴🇨🇴👍🏼🎉 '"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "## BIG PROBLEM - SKIPPED OVER A BUNCH OF ENTRIES\n",
-    "batch_dict['message'][377592]\n",
-    "#print(len(batch_dict['message'].keys()))"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 4,
    "metadata": {
     "collapsed": false
@@ -159,7 +144,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 326 ms\n"
+      "time: 338 ms\n"
      ]
     }
    ],
@@ -180,7 +165,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 2.02 ms\n"
+      "time: 2.15 ms\n"
      ]
     }
    ],
@@ -204,7 +189,7 @@
      "text": [
       "Skipping invalid key:  no. Even if the union were a matter of economic indifference\n",
       "Skipping invalid key:  and even if it were to be disadvantageous from the economic standpoint\n",
-      "time: 1min 40s\n"
+      "time: 1min 37s\n"
      ]
     }
    ],
@@ -234,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -243,7 +228,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 23.2 ms\n"
+      "time: 25.4 ms\n"
      ]
     }
    ],
@@ -257,11 +242,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 2.39 s\n"
+     ]
+    }
+   ],
    "source": [
     "user_master_list = {}\n",
     "\n",
@@ -323,6 +316,7 @@
     "tier_depth = 3\n",
     "\n",
     "#successively add tiers of friendship to every user in user_master_list\n",
+    "## this takes the longest of any part of the program - about an hour in total.\n",
     "for tier in range(3,tier_depth+1):\n",
     "    \n",
     "    print(\"Building lists of connections of degree\", tier, \"for each user...\")\n",
@@ -335,27 +329,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "ename": "IndexError",
-     "evalue": "index 7000050 is out of bounds for axis 1 with size 77361",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-10-a384f3a29427>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mff\u001b[0m \u001b[0;32min\u001b[0m \u001b[0muser_data\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfriends\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     10\u001b[0m         \u001b[0;31m#connections are bi-directional, so we fill in two spots in the connectivity matrix.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 11\u001b[0;31m         \u001b[0mconnectivity\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0muser_id\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     12\u001b[0m         \u001b[0mconnectivity\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mff\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0muser_id\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     13\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mIndexError\u001b[0m: index 7000050 is out of bounds for axis 1 with size 77361"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "time: 1.13 s\n"
+      "time: 1min 50s\n"
      ]
     }
    ],
@@ -364,6 +401,9 @@
     "# by itself\n",
     "## conveniently, the list of users already ranges from 0 to 77,359 without gaps\n",
     "## therefore, can use usernumbers directly as row/column indices in connectivity matrix\n",
+    "\n",
+    "## takes about two minutes on 2016 macbook pro with 16GB of ram to convert to sparse matrix.\n",
+    "\n",
     "n_users = len(user_master_list.keys())\n",
     "connectivity = np.zeros([n_users,n_users])\n",
     "\n",
@@ -371,12 +411,41 @@
     "    for ff in user_data.friends[1]:\n",
     "        #connections are bi-directional, so we fill in two spots in the connectivity matrix.\n",
     "        connectivity[user_id,ff] = 1\n",
-    "        connectivity[ff,user_id] = 1"
+    "        connectivity[ff,user_id] = 1\n",
+    "        \n",
+    "#multiplying 100k by 100k numpy matrices too taxing - try sparse matrices.\n",
+    "csp = sp.csr_matrix(connectivity)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "#credit to Philipp Singer for his excellent tutorial on how to save the output of big matrix\n",
+    "#multiplication to disk: http://www.philippsinger.info/?p=464\n",
+    "l = n_users\n",
+    " \n",
+    "f = tb.open_file('product_2.h5', 'w')\n",
+    "filters = tb.Filters(complevel=5, complib='blosc')\n",
+    "out = f.create_carray(f.root, 'data', tb.Float32Atom(), shape=(l, l), filters=filters)\n",
+    " \n",
+    "bl = 1000 #this is the number of rows we calculate each loop\n",
+    "b = csp.tocsc() #we slice b on columns, csc improves performance\n",
+    " \n",
+    "#slice by row\n",
+    "for i in range(0, l, bl):\n",
+    "    out[:,i:min(i+bl, l)] = (csp.dot(b[:,i:min(i+bl, l)])).toarray()\n",
+    " \n",
+    "f.close()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
@@ -385,23 +454,57 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[ 1.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  1.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  1.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.\n",
-      "  0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
-      "time: 3.1 ms\n"
+      "(array([   0,    1,    2, ..., 4997, 4998, 4999]),)\n",
+      "(77360,)\n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      "(array([   0,    1,    2, ..., 4993, 4997, 4999]),)\n",
+      "(77360,)\n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      "(array([   0,    1,    2, ..., 4993, 4998, 4999]),)\n",
+      "(77360,)\n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n",
+      "(array([   0,    1,    2, ..., 4996, 4997, 4999]),)\n",
+      "(77360,)\n",
+      "[ 0.  0.  0.  0.  0.  0.  0.  0.  0.  0.]\n"
+     ]
+    },
+    {
+     "ename": "KeyboardInterrupt",
+     "evalue": "",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-17-4e8f958cef4b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mrow\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m-\u001b[0m\u001b[0;36m10\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m \u001b[0mh5\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mKeyboardInterrupt\u001b[0m: "
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "time: 7.11 s\n"
      ]
     }
    ],
    "source": [
-    "print(connectivity[,:100])"
+    "h5 = tb.open_file('product_2.h5', 'r')\n",
+    "a = h5.root.data\n",
+    "\n",
+    "## the advantage of this system is that only one row gets loaded into memory at a time -\n",
+    "# although we are saving a list of second-tier connections\n",
+    "for user_id in range(10):\n",
+    "    row = a[user_id,:] \n",
+    "    user_master_list[user_id].friends[2] = list(np.nonzero(row))\n",
+    "    print(len(user_master_list[user_id].friends[2]))\n",
+    "    time.sleep(2)\n",
+    "    \n",
+    "h5.close()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -410,13 +513,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "77360\n",
-      "time: 823 µs\n"
+      "time: 737 µs\n"
      ]
     }
    ],
    "source": [
-    "print(n_users)"
+    "h5.close()"
    ]
   },
   {
@@ -427,6 +529,30 @@
    },
    "outputs": [],
    "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "' 🇨🇴🇨🇴🇨🇴🇨🇴👍🏼🎉 '"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "## BIG PROBLEM - SKIPPED OVER A BUNCH OF ENTRIES\n",
+    "batch_dict['message'][377592]\n",
+    "#print(len(batch_dict['message'].keys()))"
+   ]
   }
  ],
  "metadata": {
