--- a/src/network_final.ipynb
+++ b/src/network_final.ipynb
@@ -66,48 +66,8 @@
     "        batch_dict['amount'][i] = row[' amount']\n",
     "        batch_dict['message'][i] = row[' message']\n",
     "        \n",
-    "df_batch = pd.DataFrame.from_dict(batch_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "## repeat the above - load in data from stream_payment and turn into pandas dataframe.\n",
-    "stream_dict = {}\n",
-    "stream_dict['time'] = {}\n",
-    "stream_dict['id1'] = {}\n",
-    "stream_dict['id2'] = {}\n",
-    "stream_dict['amount'] = {}\n",
-    "stream_dict['message'] = {}\n",
-    "\n",
-    "with open(stream_path) as csvfile:\n",
-    "    reader = csv.DictReader(csvfile)\n",
-    "    for i, row in enumerate(reader):\n",
-    "        stream_dict['time'][i] = row['time']\n",
-    "        stream_dict['id1'][i] = row[' id1']\n",
-    "        stream_dict['id2'][i] = row[' id2']\n",
-    "        stream_dict['amount'][i] = row[' amount']\n",
-    "        stream_dict['message'][i] = row[' message']\n",
-    "        \n",
-    "df_stream = pd.DataFrame.from_dict(stream_dict)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "#dictionary columns are randomly ordered - reorder as expected\n",
-    "df_batch = df_batch[['time','id1','id2','amount','message']]\n",
-    "df_stream = df_stream[['time','id1','id2','amount','message']]"
+    "df_batch = pd.DataFrame.from_dict(batch_dict)\n",
+    "df_batch = df_batch[['time','id1','id2','amount','message']]"
    ]
   },
   {
@@ -217,22 +177,11 @@
    },
    "outputs": [],
    "source": [
-    "## new approach - try to create a connectivity matrix - then, can figure out second-tier neighbors and such by multiplying matrix\n",
-    "# by itself"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
     "## use the find_new_friends function (stored in user_class.py) to supplement friend tiers down to level of interest\n",
     "#this is the most labor-intensive part of the program, unsurprisingly - n=2 takes 2 minutes on my macbook pro\n",
-    "#n=3 and n=4 take about 30 minutes each.\n",
-    "tier_depth = 4\n",
+    "\n",
+    "#unfortunately, n=3 and n=4 are highly memory intensive...couldn't get them to work consistently\n",
+    "tier_depth = 2\n",
     "\n",
     "#successively add tiers of friendship to every user in user_master_list\n",
     "for tier in range(2,tier_depth+1):\n",
@@ -256,6 +205,230 @@
     "## for each user, dictionary dos links a user id with the level of friendship\n",
     "for user_id, user_data in user_master_list.items():\n",
     "    user_data.build_dos()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## DEFINE TESTS ##\n",
+    "\n",
+    "## the following tests take in pairs of user IDs as strings, convert them to int and use\n",
+    "## User.dos to look up whether they are connected to each other, and if so at what degree.\n",
+    "\n",
+    "#first test - have these people had a transaction with each other in the batch data set?\n",
+    "def test1(id1,id2):\n",
+    "    \n",
+    "    if type(id1)==str and type(id2)==str:\n",
+    "    \n",
+    "        #converts user IDs from string into ints, which we use as dictionary keys\n",
+    "        try:\n",
+    "            user1 = int(id1)\n",
+    "        except ValueError:\n",
+    "            return 'unverified'\n",
+    "\n",
+    "        try:\n",
+    "            user2 = int(id2)\n",
+    "        except ValueError:\n",
+    "            return 'unverified'\n",
+    "        \n",
+    "        #this being python, the following line doesn't take up new memory - just a shorthand\n",
+    "        if user1 in user_master_list.keys(): #have to check in case id1 is a new user\n",
+    "            user_dos = user_master_list[user1].dos\n",
+    "\n",
+    "            if user2 in user_dos.keys():\n",
+    "                if user_dos[user2] == 1:\n",
+    "                    return 'trusted'\n",
+    "    \n",
+    "    return 'unverified'\n",
+    "\n",
+    "#second test - is the transaction partner either a 1st or 2nd degree connection?    \n",
+    "def test2(id1,id2):\n",
+    "    \n",
+    "    if type(id1)==str and type(id2)==str:\n",
+    "    \n",
+    "        #converts user IDs from string into ints, which we use as dictionary keys\n",
+    "        try:\n",
+    "            user1 = int(id1)\n",
+    "        except ValueError:\n",
+    "            return 'unverified'\n",
+    "\n",
+    "        try:\n",
+    "            user2 = int(id2)\n",
+    "        except ValueError:\n",
+    "            return 'unverified'\n",
+    "    \n",
+    "        #this being python, the following line doesn't take up new memory - just a shorthand\n",
+    "        if user1 in user_master_list.keys(): #have to check in case id1 is a new user\n",
+    "\n",
+    "            user_dos = user_master_list[user1].dos\n",
+    "\n",
+    "            if user2 in user_dos.keys():\n",
+    "                if user_dos[user2] in range (1,3):\n",
+    "                    return 'trusted'\n",
+    "    \n",
+    "    return 'unverified'\n",
+    "    \n",
+    "#third test - is the transaction partner at least a 4th degree connection?    \n",
+    "def test3(id1,id2):\n",
+    "    \n",
+    "    if type(id1)==str and type(id2)==str:\n",
+    "    \n",
+    "        #converts user IDs from string into ints, which we use as dictionary keys\n",
+    "        try:\n",
+    "            user1 = int(id1)\n",
+    "        except ValueError:\n",
+    "            return 'unverified'\n",
+    "\n",
+    "        try:\n",
+    "            user2 = int(id2)\n",
+    "        except ValueError:\n",
+    "            return 'unverified'\n",
+    "        \n",
+    "        #this being python, the following line doesn't take up new memory - just a shorthand\n",
+    "        if user1 in user_master_list.keys(): #have to check in case id1 is a new user    \n",
+    "\n",
+    "            user_dos = user_master_list[user1].dos\n",
+    "\n",
+    "            if user2 in user_dos.keys():\n",
+    "                if user_dos[user2] in range(1,5):\n",
+    "                    return 'trusted'\n",
+    "\n",
+    "    return 'unverified'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'stream_path' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-ffe2793db0d0>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      7\u001b[0m \u001b[0mstream_dict\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'message'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m{\u001b[0m\u001b[0;34m}\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstream_path\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnewline\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m''\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mcsvfile\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mreader\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mDictReader\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcsvfile\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mrow\u001b[0m \u001b[0;32min\u001b[0m \u001b[0menumerate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mreader\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'stream_path' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "## Now load in second half of data set - this time we choose to flag transactions as verified or unverified.\n",
+    "stream_dict = {}\n",
+    "stream_dict['time'] = {}\n",
+    "stream_dict['id1'] = {}\n",
+    "stream_dict['id2'] = {}\n",
+    "stream_dict['amount'] = {}\n",
+    "stream_dict['message'] = {}\n",
+    "\n",
+    "with open(stream_path, newline='') as csvfile:\n",
+    "    reader = csv.DictReader(csvfile)\n",
+    "    for i, row in enumerate(reader):\n",
+    "        stream_dict['time'][i] = row['time']\n",
+    "        stream_dict['id1'][i] = row[' id1']\n",
+    "        stream_dict['id2'][i] = row[' id2']\n",
+    "        stream_dict['amount'][i] = row[' amount']\n",
+    "        stream_dict['message'][i] = row[' message']\n",
+    "        \n",
+    "df_stream = pd.DataFrame.from_dict(stream_dict)\n",
+    "df_stream = df_stream[['time','id1','id2','amount','message']]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'df_stream' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-5a3fa3397ce4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m#test 1 - immediate adjacency\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0mtest1_a\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_stream\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m1000000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtest1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m \u001b[0mtest1_b\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_stream\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1000000\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2000000\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtest1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0mtest1_c\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf_stream\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2000000\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mapply\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;32mlambda\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtest1\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id1'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'id2'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0maxis\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'df_stream' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "## create output columns\n",
+    "## I found that pandas started to slow down drastically when trying to calculate over 1,000,000\n",
+    "## entries at a time...hence broken into pieces\n",
+    "\n",
+    "#test 1 - immediate adjacency\n",
+    "test1_a = df_stream[:1000000].apply(lambda x: test1(x['id1'], x['id2']), axis=1)\n",
+    "test1_b = df_stream[1000000:2000000].apply(lambda x: test1(x['id1'], x['id2']), axis=1)\n",
+    "test1_c = df_stream[2000000:].apply(lambda x: test1(x['id1'], x['id2']), axis=1)\n",
+    "df_stream['test1'] = pd.concat([test1_a, test1_b, test1_c])\n",
+    "\n",
+    "print('Test 1 results:')\n",
+    "print(df_stream['test1'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#test 2 - 2nd degree friends pass as verified\n",
+    "test2_a = df_stream[:1000000].apply(lambda x: test2(x['id1'], x['id2']), axis=1)\n",
+    "test2_b = df_stream[1000000:2000000].apply(lambda x: test2(x['id1'], x['id2']), axis=1)\n",
+    "test2_c = df_stream[2000000:].apply(lambda x: test2(x['id1'], x['id2']), axis=1)\n",
+    "df_stream['test2'] = pd.concat([test2_a, test2_b, test2_c])\n",
+    "\n",
+    "print('Test 2 results:')\n",
+    "print(df_stream['test2'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#test 3\n",
+    "test3_a = df_stream[:1000000].apply(lambda x: test3(x['id1'], x['id2']), axis=1)\n",
+    "test3_b = df_stream[1000000:2000000].apply(lambda x: test3(x['id1'], x['id2']), axis=1)\n",
+    "test3_c = df_stream[2000000:].apply(lambda x: test3(x['id1'], x['id2']), axis=1)\n",
+    "df_stream['test3'] = pd.concat([test3_a, test3_b, test3_c])\n",
+    "\n",
+    "print('Test 3 results:')\n",
+    "print(df_stream['test3'].value_counts())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "## OUTPUT TO TEXT FILE ## \n",
+    "input_dir = 'paymo_output/'\n",
+    "file_1 = input_dir + 'output1.txt'\n",
+    "file_2 = input_dir + 'output2.txt'\n",
+    "file_3 = input_dir + 'output3.txt'\n",
+    "\n",
+    "df_stream['test1'].to_csv(file_1, index=False)\n",
+    "df_stream['test2'].to_csv(file_2, index=False)\n",
+    "df_stream['test3'].to_csv(file_3, index=False)"
    ]
   }
  ],
